--- a/src/views/homeTemplate.html
+++ b/src/views/homeTemplate.html
@@ -1,14 +1,52 @@
+<div class="baro">
+
+	coucoi
+
+</div>
+
+
 <div class="letdoo-theme">
 
-
-	<header class="LDJ-header">
-	<div class="center-vertical">
+<div class="bar fixed ">cou</div>
+	<header class="LDJ-header verticalCenter">
+	<div class="container">
 		<div class="title">test</div>
 		<div class="large text center">test test </div>
 	</div>
 </header>
 
-<div class="LDJ-footer"></div>
+<section class="">
+
+	<div class="container bg">
+		<h2>Coucou</h2>
+	</div>
+</section>
+<section class="grey">
+	<div class="container">
+		<h2>Coucou</h2>
+
+		<div class="row-fluid">
+
+
+			<div class="col twelve">OKOK</div>
+
+
+		</div>
+	</div>
+</section>
+
+<section >
+	<div class="container">
+		<h2>Coucou</h2>
+	</div>
+</section>
+<section class="grey">
+	<div class="container">
+		<h2>Coucou</h2>
+	</div>
+</section>
+
+<div class="LDJ-footer"> footer</div>
 
 
 
