--- a/src/views/homeTemplate.html
+++ b/src/views/homeTemplate.html
@@ -1,13 +1,29 @@
-<div class="baro">
-
-	coucoi
-
-</div>
-
-
 <div class="letdoo-theme">
 
-<div class="bar fixed ">cou</div>
+
+<div class="panel-slide off">
+
+
+<div class="slideLeft">
+
+<div class="fixed">
+	<h2>coucoi</h2>
+<p>couccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouc</p>
+</div>
+</div>
+
+<div class="panel">
+
+
+<nav class="LDJ-menu">
+	<div class="container"><div class="logo">LetDooJS</div>
+	<nav class="nav">
+			<ul><li>Accueil</li><li>test</li><li>test</li></ul>
+
+	</nav>
+</div>
+</nav>
+
 	<header class="LDJ-header verticalCenter">
 	<div class="container">
 		<div class="title">test</div>
@@ -22,8 +38,18 @@
 	</div>
 </section>
 <section class="grey">
-	<div class="container">
+
+	<div class="container panel-slide">
+
+		<div class="slideLeft">
+
+		<h2>coucoi</h2>
+		<p>couccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouc</p>
+		</div>
+
+<div class="panel">
 		<h2>Coucou</h2>
+
 
 		<div class="row-fluid">
 
@@ -32,6 +58,8 @@
 
 
 		</div>
+		</div>
+
 	</div>
 </section>
 
@@ -46,8 +74,9 @@
 	</div>
 </section>
 
-<div class="LDJ-footer"> footer</div>
+<footer class="LDJ-footer"> footer</footer>
 
 
 
 </div>
+</div></div>
