--- a/web/css/letdooCSS.css
+++ b/web/css/letdooCSS.css
@@ -1,6 +1,6 @@
 /*RESET CSS*/
 html{color:#000;background:#FFF}
-body,table,form,h1,h2,h3,h4,h5,h6,p{margin:0;padding: 0;font-family:inherit;font-size:100%;font-weight:normal}
+body,table,form,h1,h2,h3,h4,h5,h6,p,ul{margin:0;padding: 0;font-family:inherit;font-size:100%;font-weight:normal}
 
 /**Global Tags*/
 p{text-align: justify;margin: 15px 0}
@@ -12,6 +12,16 @@ section{width: 100%;padding: 80px 0}
 .LDJ-header, .LDJ-footer{height: 530px;width: 100%}
 .LDJ-header.verticalCenter, .LDJ-footer.verticalCenter{padding: 100px 0;height: 330px}
 
+.LDJ-menu{width: 100%;height: 60px}
+.LDJ-menu .logo{font-size: 3em;height: 100%}
+.LDJ-menu nav{float: right}
+.LDJ-menu nav ul{list-style: none}
+.LDJ-menu nav ul li {display: inline-block}
+
+.LDJ-menu.top,.LDJ-menu.bottom{position: absolute;left: 0;z-index: 3}
+.LDJ-menu.left,.LDJ-menu.right{position: absolute;height: 100%;width: 60px;top:0;z-index: 3}
+.LDJ-menu.fixed{position: fixed}
+
 /*Texte*/
 .title{margin: auto;height: 120px;text-align: center;width: 100%;font-size: 8em;line-height: 120px;padding: 15px 0}
 .text{margin: 15px 0}
@@ -19,14 +29,30 @@ section{width: 100%;padding: 80px 0}
 .text.center{text-align: center;margin: auto}
 
 
-/*Bar*/
-.bar{width: 100%;height: 60px}
-.bar.top,.bar.bottom{position: absolute;left: 0}
-.bar.left,.bar.right{position: absolute;height: 100%;width: 60px;top:0}
+/*Panel*/
+.slideLeft{display: none}
+.panel-slide{overflow: hidden;position: relative}
+.slideLeft{overflow: hidden}
+.panel-slide.slideLeft{display: block}
+.panel-slide .slideLeft{display: block; position: absolute; width: 300px; height: 100%; left: 0;z-index: 1}
+.panel-slide .panel{z-index: 2; position: relative; left: 300px}
+
+.panel-slide.off .panel{left: 0}
+.panel-slide.off .slideLeft{left: -300px}
+
+.panel-slide .panel{-webkit-transition: left 0.5s linear  ;-moz-transition: left 0.5s linear  ;-o-transition: left 0.5s linear  ;-ms-transition: left 0.5s linear  ;transition: left 0.5s linear  }
+.panel-slide .slideLeft{-webkit-transition: left 0.3s linear;-moz-transition: left 0.3s linear;-o-transition: left 0.3s linear;-ms-transition: left 0.3s linear;transition: left 0.3s linear}
+
+.panel-slide.off .slideLeft{-webkit-transition: left 0.5s linear  ;-moz-transition: left 0.5s linear  ;-o-transition: left 0.5s linear  ;-ms-transition: left 0.5s linear  ;transition: left 0.5s linear  }
+.panel-slide.off .panel{-webkit-transition: left 0.3s linear;-moz-transition: left 0.3s linear;-o-transition: left 0.3s linear;-ms-transition: left 0.3s linear;transition: left 0.3s linear}
+
+
 
 /*Block*/
-.container{width: 1200px; margin: auto}
-.container{-webkit-transition: width 0.5s;-moz-transition: width 0.5s;-o-transition: width 0.5s;-ms-transition: width 0.5s;transition: width 0.5s}
+.container,.container-medium,.container-small{width: 1200px; margin: auto}
+.container-medium{width: 1000px}
+.container-small{width: 960px}
+.container,.container-medium,.container-small{-webkit-transition: width 0.5s;-moz-transition: width 0.5s;-o-transition: width 0.5s;-ms-transition: width 0.5s;transition: width 0.5s}
 
 
 
@@ -59,7 +85,7 @@ section{width: 100%;padding: 80px 0}
 .row-fluid .seven  {width: 55.3333%}
 .row-fluid .height {width: 63.6666%}
 .row-fluid .nine   {width: 71.9999%}
-.row-fluid .ten 	 {width: 80.3333%}
+.row-fluid .ten    {width: 80.3333%}
 .row-fluid .eleven {width: 88.3333%}
 .row-fluid .twelve {width: 100%}
 
@@ -72,43 +98,35 @@ section{width: 100%;padding: 80px 0}
 .relative{position: relative}
 .absolute{position: absolute}
 .fixed{position: fixed}
+.pullRight{float: right}
+.pullLeft{float: left}
 
 /*Color Theme - LetDoo*/
 .bg{background: rgba(70, 70, 70, 0.50)}
 .letdoo-theme .LDJ-header,.letdoo-theme .LDJ-footer{color:#FFF;background: #222222}
+.letdoo-theme .LDJ-menu{background: rgba(0, 0, 0, 0.70);color:#FFF}
 .letdoo-theme section{background: #FFF}
 .letdoo-theme section.grey{background: #EDEDED}
-.letdoo-theme .bar{background: rgba(0, 0, 0, 0.70);color:#FFF}
-
+.letdoo-theme .panel-slide .slideLeft{background: #31363E;color: #FFF}
 
 /*Media Query*/
 @media only screen and (max-width: 1300px) and (min-width: 950px){
 	.container {width: 950px}
+	.container-medium{width: 750px}
+	.container-small{width: 450px}
 }
 
 @media only screen and (max-width: 1050px) and (min-width: 725px){
 	.container {width: 725px}
+	.container-medium{width: 480px}
+	.container-small{width: 250px}
 }
 
 @media only screen and (max-width: 825px){
 	.container {width: 80%}
+	.container-medium{width: 70%}
+	.container-small{width: 60%}
 }
-
-
-/* baro
-
-position: absolute;
-width: 300px;
-background: red;
-z-index: 5;
-right: -300px;
-}
-
-
-template
-width: 53%;
-position: relative;
-
 
 
 /*
