--- a/src/views/homeTemplate.html
+++ b/src/views/homeTemplate.html
@@ -8,17 +8,25 @@
 
 <div class="fixed">
 	<h2>coucoi</h2>
-<p>couccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouc</p>
+<p>couccouccoucccouccouccoucuc</p>
 </div>
 </div>
 
 <div class="panel">
 
 
-<nav class="LDJ-menu">
+<nav class="LDJ-menu left fixed">
 	<div class="container"><div class="logo">LetDooJS</div>
 	<nav class="nav">
-			<ul><li>Accueil</li><li>test</li><li>test</li></ul>
+			<ul><li class="dropdown">Accueil
+			<ul>
+
+					<li class="label">Accueil</li>
+					<li>	<a href="">Sous menu 1</a></li>
+					<li>Sous menu 2</li>
+			</ul>
+
+			</li><li>test</li><li>test</li><li><a href="">fin</a></li></ul>
 
 	</nav>
 </div>
@@ -44,7 +52,7 @@
 		<div class="slideLeft">
 
 		<h2>coucoi</h2>
-		<p>couccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouccouc</p>
+		<p>couccuccouc</p>
 		</div>
 
 <div class="panel">
