--- a/web/css/letdooCSS.css
+++ b/web/css/letdooCSS.css
@@ -7,16 +7,26 @@ p{text-align: justify;margin: 15px 0}
 h1,h2,h3,h4,h5,h6{margin: 15px 0}
 h1{font-size: 3em}h2{font-size: 2.5em}h3{font-size: 2em}h4{font-size: 1.8em}h5{font-size: 1.4em}h6{font-size: 1em}
 section{width: 100%;padding: 80px 0}
+a{text-decoration: none;color: inherit}
 
 /*Custom LDJ Tags*/
 .LDJ-header, .LDJ-footer{height: 530px;width: 100%}
 .LDJ-header.verticalCenter, .LDJ-footer.verticalCenter{padding: 100px 0;height: 330px}
 
-.LDJ-menu{width: 100%;height: 60px}
-.LDJ-menu .logo{font-size: 3em;height: 100%}
-.LDJ-menu nav{float: right}
-.LDJ-menu nav ul{list-style: none}
-.LDJ-menu nav ul li {display: inline-block}
+.LDJ-menu{width: 100%;height: 70px;box-shadow: 0px 3px 7px #000;z-index: 50}
+.LDJ-menu .logo{font-size: 2.5em;height: 100%;line-height: 70px;font-family: Titillium Web;float: left;width: 30%}
+.LDJ-menu nav{float: right;width: 70%;height: 100%}
+.LDJ-menu nav ul{list-style: none;font-family: Titillium Web;text-transform: uppercase;font-weight: bold;float: right}
+.LDJ-menu nav ul li {display: inline-block;margin: 0 20px;line-height: 70px;font-size: 0.9em}
+.LDJ-menu nav ul li a {display: block;width: 100%;height: 100%}
+.LDJ-menu nav ul li a:hover {text-decoration: underline}
+.LDJ-menu nav ul li.dropdown{cursor: pointer}
+.LDJ-menu nav ul li.dropdown:after{content: '>';display:inline-block;font-size: 1.2em; font-weight:bold;-webkit-transform: rotate(90deg);-moz-transform: rotate(90deg);-o-transform: rotate(90deg);-ms-transform: rotate(90deg);transform: rotate(90deg)}
+.LDJ-menu nav ul li.dropdown:hover ul{display: block}
+.LDJ-menu nav ul li.dropdown ul{display:none; position: absolute; height: 200px; width: 100%; left: 0; right: 0; top: 70px;cursor: default}
+.LDJ-menu nav ul li.dropdown ul li{height: 100%;line-height: 200px;margin-right: 30px;float: left}
+.LDJ-menu nav ul li.dropdown ul .label{font-size: 2.5em;font-style: italic;margin-left: 150px;margin-right: 150px;border: none}
+
 
 .LDJ-menu.top,.LDJ-menu.bottom{position: absolute;left: 0;z-index: 3}
 .LDJ-menu.left,.LDJ-menu.right{position: absolute;height: 100%;width: 60px;top:0;z-index: 3}
@@ -47,6 +57,8 @@ section{width: 100%;padding: 80px 0}
 .panel-slide.off .panel{-webkit-transition: left 0.3s linear;-moz-transition: left 0.3s linear;-o-transition: left 0.3s linear;-ms-transition: left 0.3s linear;transition: left 0.3s linear}
 
 
+/*Section*/
+section.marg{margin: 20px auto;box-shadow: 0px 0px 15px #000}
 
 /*Block*/
 .container,.container-medium,.container-small{width: 1200px; margin: auto}
@@ -104,7 +116,8 @@ section{width: 100%;padding: 80px 0}
 /*Color Theme - LetDoo*/
 .bg{background: rgba(70, 70, 70, 0.50)}
 .letdoo-theme .LDJ-header,.letdoo-theme .LDJ-footer{color:#FFF;background: #222222}
-.letdoo-theme .LDJ-menu{background: rgba(0, 0, 0, 0.70);color:#FFF}
+.letdoo-theme .LDJ-menu{background:rgba(0, 0, 0, 0.70);color:#FFF}
+.letdoo-theme .LDJ-menu nav ul li.dropdown ul{background:rgba(0, 0, 0, 0.95)}
 .letdoo-theme section{background: #FFF}
 .letdoo-theme section.grey{background: #EDEDED}
 .letdoo-theme .panel-slide .slideLeft{background: #31363E;color: #FFF}
