--- a/src/views/homeTemplate.html
+++ b/src/views/homeTemplate.html
@@ -15,7 +15,7 @@
 <div class="panel">
 
 
-<nav class="LDJ-menu left fixed">
+<nav class="LDJ-menu fixed">
 	<div class="container"><div class="logo">LetDooJS</div>
 	<nav class="nav">
 			<ul><li class="dropdown">Accueil
